--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <div class="second section">
       <img class="flower-image" src="img/flower.jpeg" />
     </div>
+    <div class="second section">
+      <img class="image" src="img/low.jpeg" />
+    </div>
   </div>
 </body>
 
