--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img class="flower-image" src="img/flower.jpeg" />
     </div>
     <div class="second section">
-      <img class="image" src="img/low.jpeg" />
+      <img class="image" src="img/low1.jpeg" />
     </div>
   </div>
 </body>
